libs/fleet/sdk-bindings/swift/CyclopsSdkFFI.h

uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_create_claim(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_delete_claim(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_get_claim(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_list_claims(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_renew_claim(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_wait_claim(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_access_token(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_create_fleet_claims(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_list_fleet_claims(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_presign_image_uploads(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_upload_image_file(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_create_image(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_delete_image(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_get_image(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_list_images(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_create_namespace(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_delete_namespace(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_get_namespace(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_list_namespaces(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_create_pool(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_delete_pool(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_get_pool(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_list_pools(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_reconcile_pool(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_update_pool(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_service_request(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_service_websocket_url(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_create_signed_service_url(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_list_signed_service_urls(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_revoke_signed_service_url(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_create_template(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_delete_template(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_get_template(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_list_templates(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_reconcile_template(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_update_template(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_create_user_api_key(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_delete_user_api_key(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_list_user_api_keys(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createsignedserviceurlrequestbuilder_sandbox(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createsignedserviceurlrequestbuilder_service(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createtemplaterequestbuilder_build(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createtemplaterequestbuilder_name(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createtemplaterequestbuilder_namespace(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createtemplaterequestbuilder_spec(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createuserapikeyrequestbuilder_build(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createuserapikeyrequestbuilder_name(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createuserapikeyrequestbuilder_scope(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopstokenproviderconfigurationbuilder_base_url(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_cyclopsclient_connect(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_cyclopsclient_connect_browser_with_access_token(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_cyclopsclient_connect_with_access_token(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_cyclopsclient_connect_with_access_token_and_native_http_client(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_cyclopsclient_connect_with_access_token_provider(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_cyclopsclient_connect_with_access_token_provider_and_native_http_client(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_cyclopsclient_connect_with_native_http_client(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_createtemplaterequestbuilder_new(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_createuserapikeyrequestbuilder_new(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_cyclopscredentials_new(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_cyclopstokenproviderconfigurationbuilder_new(void

);